[package]
name = "mochapot_lib"
version = "0.0.0"
edition = "2024"

[dependencies]
libc = "0.2.180"
linux-raw-sys = "0.12.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation"
] }
mochapot_lib_macros = { git = "ssh://git@github.com/Yhuot/mochapot_lib_macros.git", tag = "0.0.0-pre-release-2" }