[package]
name = "mochapot_lib"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Experimental Rust utilities and concurrency primitives"
repository = "https://github.com/Yhuot/mochapot_lib"
readme = "README.md"

[dependencies]
libc = "0.2.183"
linux-raw-sys = "0.12.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation"
] }
serde = { version = "1.0.228", optional = true, features = ["derive"]}


[features]
async = []
concurrency = []
serde = ["dep:serde", "serde/derive"]
full = ["async", "concurrency", "serde"]

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(non_sequential_testing)'] }